# com.github.sqmedeiros-lpeglabel

./: CMakeLists.txt  README.md  adaptedFiles_Lpeglabel.txt  build_artifact.py  dependency-log-lua5.1.xml  dependency-log-lua5.4.xml  dependency-log.xml
.github/workflows/: main.yml
jonchki/: jonchkihere.py
lpeglabel/: CMakeLists.txt  __README__.txt
lpeglabel/copy_over/: CMakeLists.txt
lpeglabel/installer/lua5.1/: lpeglabel.xml
lpeglabel/installer/lua5.4/: lpeglabel.xml
